consume browserplus.js from Y! CDN

--- a/test/agtest.html
+++ b/test/agtest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="browserplus/browserplus.js"></script>
+<script src="http://bp.yahooapis.com/2.4.20/browserplus.js"></script>
 <script>
 
 Config = function()
